--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "netlify dev",
+    "build": "npm run build:functions",
+    "build:functions": "netlify-lambda build functions"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@netlify/plugin-nextjs": "^4.41.3"
+    "axios": "^0.27.2"
+  },
+  "devDependencies": {
+    "netlify-cli": "^15.0.0",
+    "netlify-lambda": "^2.0.15"
   }
 }
