--- a/netlify.toml
+++ b/netlify.toml
@@ -1,23 +1,24 @@
+# Netlify configuration file
+
+# Build settings
 [build]
+  # Directory with the built files (for static sites)
   publish = "public"
+  
+  # Functions directory
   functions = "functions"
 
+# Redirects
 [[redirects]]
-  from = "/api/status"
-  to = "/.netlify/functions/status"
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
   status = 200
 
-[[redirects]]
-  from = "/api/tiktok/account"
-  to = "/.netlify/functions/tiktok-account"
-  status = 200
-
-[[redirects]]
-  from = "/api/tiktok/post"
-  to = "/.netlify/functions/tiktok-post"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+# Headers
+[[headers]]
+  # Define which paths this specific [[headers]] block will cover
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Headers = "Content-Type"
+    Access-Control-Allow-Methods = "GET, POST, OPTIONS"
